--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ body {
 } 
  
 .footer-logo-style {
-    color: var(--third-text-color);
+    color:#F4F4FD;
 }
 
 .footer-text{
@@ -210,7 +210,7 @@ color: #F4F4FD;
     background-color: var(--btn-color);
     color: var(--third-text-color);
 
-    font-family: inherit;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -259,6 +259,4 @@ color: #F4F4FD;
     height: 48px;
 }
 
-.portfolio-link {
-    text-decoration: none;
-}
+
